# hasher

./: .gitignore  README.md  com.github.jeysonflores.hasher.yml  post_install.py  setup.py
.flatpak-builder/cache/: summary  summary.idx
.flatpak-builder/cache/refs/heads/app/com.github.jeysonflores.hasher/x86_64/: master
.flatpak-builder/cache/refs/heads/x86_64-com.github.jeysonflores.hasher.yml/: build-hasher  cleanup  finish  init
.flatpak-builder/cache/summaries/: f97b047b027f6ab3453df2037a95e572872899798f246db0df32817fa240de09-7000dad7f38a41030f137431872ea2aaa789ce2949f8c95abecb905a62a0db09.delta
.flatpak-builder/checksums/: x86_64-com.github.jeysonflores.hasher.yml
.github/workflows/: main.yml
build-aux/: post_install.py
daemon/: meson.build
daemon/data/: com.github.jeysonflores.hasher.Service.desktop.in  com.github.jeysonflores.hasher.Service.service.in  meson.build
daemon/src/: hasher_service.py  meson.build
daemon/tests/: time_test.py
data/: com.github.jeysonflores.hasher.appdata.xml  com.github.jeysonflores.hasher.contract  com.github.jeysonflores.hasher.desktop  com.github.jeysonflores.hasher.gschema.xml  style.css
po/: hasher.pot
po/es/LC_MESSAGES/: hasher.mo  hasher.po
po/es_ES/LC_MESSAGES/: hasher.po
src/: HashView.py  MainWindow.py  MainWindow.py~  WelcomeView.py  constants.py  main.py  window.py
